[gd_scene load_steps=6 format=3 uid="uid://co146j3iy1eno"]

[ext_resource type="Texture2D" uid="uid://cn7yhuuxf6lg7" path="res://assets/lightbrownbook/Paper UI Pack/Paper UI/Plain/6 Player HUD/1.png" id="1_jaj6c"]
[ext_resource type="FontFile" uid="uid://dkq1tgin5o4n2" path="res://fonts/Dongle-Bold.ttf" id="2_1yjo5"]
[ext_resource type="Script" uid="uid://c6etmsmmf0apj" path="res://scripts/ui/mission_item.gd" id="2_8776k"]
[ext_resource type="FontFile" uid="uid://crbmmdfeivhy5" path="res://fonts/Dongle-Light.ttf" id="3_8776k"]
[ext_resource type="FontFile" uid="uid://bnrewgykekfig" path="res://fonts/Dongle-Regular.ttf" id="4_gdco1"]

[node name="mission" type="NinePatchRect"]
custom_minimum_size = Vector2(500, 125)
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("1_jaj6c")
region_rect = Rect2(15.9717, 15.9227, 224.331, 96.2742)
script = ExtResource("2_8776k")

[node name="missionTitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.304
anchor_right = 0.5
anchor_bottom = 0.304
offset_left = -193.0
offset_top = -30.0
offset_right = 194.0
offset_bottom = 7.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_1yjo5")
theme_override_font_sizes/font_size = 25
text = "Mission Title"
horizontal_alignment = 1

[node name="missionDescription" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.304
anchor_right = 0.5
anchor_bottom = 0.304
offset_left = -227.0
offset_top = -10.0
offset_right = 160.0
offset_bottom = 49.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -10
theme_override_fonts/font = ExtResource("3_8776k")
theme_override_font_sizes/font_size = 19
text = "Mission Description that talks about the details of the mission with max 3 lines of text "
horizontal_alignment = 1
autowrap_mode = 3

[node name="rewardsLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.782
anchor_top = 0.384
anchor_right = 0.782
anchor_bottom = 0.384
offset_left = -361.0
offset_top = 35.0
offset_right = -255.0
offset_bottom = 62.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_1yjo5")
theme_override_font_sizes/font_size = 18
text = "Rewards:"
horizontal_alignment = 1

[node name="rewardsValue" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.304
anchor_right = 0.5
anchor_bottom = 0.304
offset_left = -139.0
offset_top = 45.0
offset_right = 136.0
offset_bottom = 72.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -10
theme_override_fonts/font = ExtResource("3_8776k")
theme_override_font_sizes/font_size = 18
text = "50 Gold, 10 Influence, 5 Prestige"
autowrap_mode = 3

[node name="rankLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.873
anchor_top = 0.348
anchor_right = 0.873
anchor_bottom = 0.348
offset_left = -23.5
offset_top = -10.5
offset_right = 23.5
offset_bottom = 10.5
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_1yjo5")
theme_override_font_sizes/font_size = 20
text = "Rank"
horizontal_alignment = 1

[node name="rankValue" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.782
anchor_top = 0.384
anchor_right = 0.782
anchor_bottom = 0.384
offset_left = 21.0
offset_top = -10.0
offset_right = 69.0
offset_bottom = 77.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_1yjo5")
theme_override_font_sizes/font_size = 60
text = "A"
horizontal_alignment = 1

[node name="acceptButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.785
anchor_top = 0.696
anchor_right = 0.785
anchor_bottom = 0.696
offset_left = -212.5
offset_top = 22.0
offset_right = -147.5
offset_bottom = 36.0

[node name="acceptLabel" type="Label" parent="acceptButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.5
offset_top = -14.5
offset_right = 23.5
offset_bottom = 14.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/line_spacing = 1
theme_override_constants/paragraph_spacing = 1
theme_override_fonts/font = ExtResource("4_gdco1")
theme_override_font_sizes/font_size = 20
text = "Accept"
horizontal_alignment = 1

[node name="declineButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.785
anchor_top = 0.696
anchor_right = 0.785
anchor_bottom = 0.696
offset_left = -140.5
offset_top = 22.0
offset_right = -75.5
offset_bottom = 36.0

[node name="declineLabel" type="Label" parent="declineButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.5
offset_top = -14.5
offset_right = 23.5
offset_bottom = 14.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/line_spacing = 1
theme_override_constants/paragraph_spacing = 1
theme_override_fonts/font = ExtResource("4_gdco1")
theme_override_font_sizes/font_size = 20
text = "Decline"
horizontal_alignment = 1
